# mbed-os-example-for-aws

./: .mbedignore  .travis.yml  CMakeLists.txt  README.md  aws-cert-converter.py  aws-iot-device-sdk-embedded-c.lib  aws_certificates.c  aws_certificates.h  aws_credentials.h  aws_iot_config.h  demo_mqtt.cpp  demo_shadow.cpp  main.cpp  mbed-aws-client.lib  mbed-client-for-aws.lib  mbed-os.lib  mbed_app.json  subscribe_publish_sample.c  wifi-ism43362.lib
.circleci/: config.yml
.github/workflows/: main.yml
aws-port/: network_functions.cpp  network_platform.h  threads_platform.h  threads_pthread_wrapper.c  timer.c  timer_platform.h
tests/: README.md
